--- a/android/app/src/main/res/layout/fragment_profile_user.xml
+++ b/android/app/src/main/res/layout/fragment_profile_user.xml
@@ -5,13 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragment.MyProfileUserFragment">
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        tools:layout_editor_absoluteX="-87dp">
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="0dp">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -24,9 +26,9 @@
                 android:layout_height="56dp"
                 android:background="@android:color/white"
                 android:elevation="2dp"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <!-- Nút Back -->
                 <ImageButton
@@ -38,9 +40,9 @@
                     android:padding="8dp"
                     android:scaleType="centerInside"
                     android:src="@drawable/icon_arrowback"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <!-- Tên người dùng trong header -->
                 <TextView
@@ -90,9 +92,9 @@
                 android:id="@+id/imgAvatar"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@drawable/avatar_boy"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="-50dp"
+                android:src="@drawable/avatar_boy"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/coverPhoto"
                 tools:ignore="MissingConstraints" />
@@ -115,19 +117,19 @@
                 android:id="@+id/userInfoContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:padding="8dp"
-                android:gravity="center_vertical"
-                app:layout_constraintTop_toBottomOf="@+id/imgAvatar"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
+                app:layout_constraintTop_toBottomOf="@+id/imgAvatar">
 
                 <!-- Thông tin cá nhân -->
                 <LinearLayout
                     android:id="@+id/FrameUser"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:orientation="vertical"
                     android:padding="6dp">
 
@@ -135,19 +137,19 @@
                         android:id="@+id/tvName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="4dp"
                         android:text="Aaliah Maya"
                         android:textSize="20sp"
-                        android:textStyle="bold"
-                        android:layout_marginStart="4dp" />
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/tvUsername"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="4dp"
                         android:text="maya75"
-                        android:textSize="14sp"
                         android:textColor="#888888"
-                        android:layout_marginStart="4dp" />
+                        android:textSize="14sp" />
                 </LinearLayout>
 
                 <!-- Thống kê follower/connection -->
@@ -155,38 +157,66 @@
                     android:id="@+id/layoutStats"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
                     android:background="@drawable/border_box"
-                    android:padding="8dp"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:padding="8dp">
+                    <!-- Follower -->
+                    <LinearLayout
+                        android:id="@+id/follower"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="1dp"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:padding="8dp">
 
+                        <TextView
+                            android:id="@+id/tvFollowerCount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="250+"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/tvFollowerLabel"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="Người theo dõi "
+                            android:textColor="#888888"
+                            android:textSize="14sp" />
+                    </LinearLayout>
                     <!-- Connection -->
                     <LinearLayout
                         android:id="@+id/following"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:padding="8dp"
                         android:layout_marginEnd="10dp"
-                        android:gravity="center">
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:padding="8dp">
 
                         <TextView
                             android:id="@+id/tvFollowingCount"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:gravity="center"
                             android:text="1000+"
                             android:textSize="16sp"
-                            android:textStyle="bold"
-                            android:gravity="center" />
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/tvConnectionLabel"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:gravity="center"
                             android:text="Đang theo dõi "
                             android:textColor="#888888"
-                            android:textSize="14sp"
-                            android:gravity="center" />
+                            android:textSize="14sp" />
                     </LinearLayout>
 
                     <!-- Divider -->
@@ -195,35 +225,7 @@
                         android:layout_height="40dp"
                         android:background="#DDDDDD" />
 
-                    <!-- Follower -->
-                    <LinearLayout
-                        android:id="@+id/follower"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:padding="8dp"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="1dp"
-                        android:gravity="center">
 
-                        <TextView
-                            android:id="@+id/tvFollowerCount"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="250+"
-                            android:textSize="16sp"
-                            android:textStyle="bold"
-                            android:gravity="center" />
-
-                        <TextView
-                            android:id="@+id/tvFollowerLabel"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Người theo dõi "
-                            android:textColor="#888888"
-                            android:textSize="14sp"
-                            android:gravity="center" />
-                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
 
