--- a/android/app/src/main/res/layout/fragment_bottom_sheet_edit_dob.xml
+++ b/android/app/src/main/res/layout/fragment_bottom_sheet_edit_dob.xml
@@ -45,18 +45,21 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:hint="Ngày sinh"
-        app:layout_constraintTop_toBottomOf="@+id/decs">
+        app:layout_constraintTop_toBottomOf="@+id/decs"
+        app:hintEnabled="true"
+        app:hintAnimationEnabled="true">
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtDob"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@drawable/custom_edittext"
+            android:background="@drawable/customedt"
             android:drawablePadding="8dp"
             android:padding="8dp"
             android:textColor="@color/black"
             android:focusable="false"
             android:clickable="true"
-            android:inputType="none" />
+            android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
     <Button
         android:id="@+id/btnSaveDob"
