--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -91,7 +91,7 @@
                                 android:id="@+id/tvName"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Full name"
+                                android:text=""
                                 android:textSize="14sp"
                                 android:textStyle="bold" />
 
